fixed sidenav overflow router-outlet display issue, and included icon for sidenav

--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -18,17 +18,29 @@
 #sidebar.active {
   margin-left: -250px;
 }
-
-a[data-toggle="collapse"] {
-  position: relative;
+.page-compress.active {
+  width:10vh;
 }
 
-.dropdown-toggle::after {
+/* .dropdown-toggle::after {
   display: block;
   position: absolute;
   top: 50%;
   right: 20px;
   transform: translateY(-50%);
+} */
+.dropdown-toggle::after {
+  /* top: 8em; */
+  margin-top: 0.5em;
+  padding-top: -0.5em;
+  display: inline-block;
+  margin-left: .255em;
+  vertical-align: .255em;
+  content: "";
+  border-top: .3em solid;
+  border-right: .3em solid transparent;
+  border-bottom: 0;
+  border-left: .3em solid transparent;
 }
 
 @media (max-width: 768px) {
